force-app/main/default/objects/Action_Parameter__c/Action_Parameter__c.object-meta.xml
<CustomObject>
    <label>Action Parameter</label>
    <nameField>
        <label>Action Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Parameter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>