force-app/main/default/objects/Action_Parameter__c/fields/LWC_Page__c.field-meta.xml
<CustomField>
    <fullName>LWC_Page__c</fullName>
    <label>LWC Page</label>
    <length>50</length>
    <type>Text</type>
</CustomField>