force-app/main/default/objects/Action_Parameter__c/fields/LWC_Page_Id__c.field-meta.xml
<CustomField>
    <fullName>LWC_Page_Id__c</fullName>
    <label>LWC Page Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>