force-app/main/default/objects/Action_Parameter__c/fields/VisualForce_Page__c.field-meta.xml
<CustomField>
    <fullName>VisualForce_Page__c</fullName>
    <label>VisualForce Page</label>
    <length>100</length>
    <type>Text</type>
</CustomField>