force-app/main/default/objects/Action_Parameter__c/fields/VisualForce_Page_Id__c.field-meta.xml
<CustomField>
    <fullName>VisualForce_Page_Id__c</fullName>
    <label>VisualForce Page Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>